--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Boolean aCademy responsive wannabe</title>
   </head>
 
+<!-- PER METTERE I BG IN LARGE MODE OLTRE I 1170PX SI PUO USARE UN DIV ESTERNO AI CONTAINER E DARE UN BG A LUI DIRETTAMENTE -->
+
   <body class="">
 
     <div class="container">
@@ -30,7 +32,7 @@
       </div>
     </div>
 
-    <div class="container grey">
+    <div class="container grey ">
       <div class="row">
         <div class="col-lg-12 col-sm-12">
           <h1>Come Funziona</h1>
